# gnn_4_nids

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
__marimo__/cache/filter_result/: C_C1asb_XqKkmugLfIXmByUiMXe801GN8e3tbuIiaoZH4.pickle  C_TGh-HMknImrNUuKObKN6-WGkqXt3jrPMrQPei4cOdsA.pickle  C_uLOH70HRbXtN8qxpzPj4Im5Y8O88SIB2cm4SrDb8pP4.pickle  E_2nLIiQ0T9H61y4UZYWBHHA0tx5garhmkjnUZbrO6EwU.pickle  E_8cOPgTEuCNZgQMvl7TGoLS_2O7i6eHF8X4LaYxyi00o.pickle  E_ROdecUoXiClf8-wensnRexrThLjfPMJYmGjIp_KRp3I.pickle  E_fRv9oKxte1ipm-ZFRXRguFjY5cbuGp7tX8gWu8ZdKoE.pickle  E_ufcWEOZmLq4HevRuFS3A8f-KC1DvNEo3coDiDOadxgM.pickle
__marimo__/cache/pre_computed_dist_figures/: X_SRXfRYo9zlDAoasf7_a2Ed-oDlGEnG0bJINjPbI4u30.pickle
data_pipeline/: Makefile  README.md  docker-compose.yaml  pyproject.toml
data_pipeline/airflow/dags/: archive_to_s3.py  monitor_streaming_pipeline.py
data_pipeline/src/notebooks/: dataset_comparison.py  zeek2unsw_nb15_dev.py
data_pipeline/src/pipeline/: archiver.py  etl.py  loader.py  transformer.py
data_pipeline/src/sql/archival/: delete_old_conn.sql  delete_old_features.sql  delete_old_unsw.sql  export_features.sql
data_pipeline/src/sql/features/: aggregate_og_features.sql  get_last_computed_stime.sql
data_pipeline/src/sql/inserts/: insert_raw_conn.sql  insert_raw_unsw_extra.sql
data_pipeline/src/sql/schema/: create_indices.sql  create_og_nb15_features.sql  create_raw_conn.sql  create_raw_unsw_extra.sql
data_pipeline/src/sqlutils/: __init__.py  core.py  substitute.py
docs/: CONCEPTS_GUIDE.md  changelog.md  docs.md
graph_building/: README.md  pyproject.toml
graph_building/src/graph_building/: __init__.py  graph_base.py  graph_gcn.py  transform.py
infrastructure/: .env.default  Makefile  README.md  build_packages.sh  docker-compose.yaml
infrastructure/airflow/: .dockerignore  Dockerfile  requirements.txt
infrastructure/data_pipeline/: Dockerfile
infrastructure/mlflow/: Dockerfile
infrastructure/pipeline/: Dockerfile
infrastructure/postgres/: init-databases.sh
model_training/: Makefile  README.md  nf15_pp_eda.py  pyproject.toml  setup_nb15.sh
model_training/scripts/: setup_nb15.sh
model_training/src/gnn/: const.py  const_nf.py  helpers.py
model_training/src/notebooks/: feature_engineering.py  preprocess.py  preprocess_nf.py  train_gcn.py  train_gcn_improved.py  train_gcn_nf.py
model_training/src/preprocessing/: preprocess_nb15.py  preprocess_nf_nb15.py
pipelines/: README.md  pyproject.toml  run_etl.sh
pipelines/airflow/dags/: alert_anomaly.py  anomaly_detection.py  archive_to_s3.py  assets.py  bootstrap_assets.py  inference_anomaly_detection.py  monitor_streaming_pipeline.py  new_feature_sensor.py
pipelines/sql/archival/: delete.sql  delete_old_computed.sql  delete_old_conn.sql  delete_old_features.sql  delete_old_raw.sql  delete_old_unsw.sql  export.sql  export_features.sql
pipelines/sql/features/: aggregate_nf_features.sql  aggregate_og_features.sql  aggregate_og_features.sql.bak  aggregate_unified_flows.sql  get_safe_horizon.sql  update_raw_logs_watermarks.sql
pipelines/sql/inserts/: init_etl_watermarks.sql  init_source_watermarks.sql  insert_source_watermarks.sql
pipelines/sql/schema/: create_etl_watermarks.sql  create_indices.sql  create_nf_nb15_v3_features.sql  create_og_nb15_features.sql  create_raw_conn.sql  create_raw_dns.sql  create_raw_ftp.sql  create_raw_http.sql  create_raw_pkt_stats.sql  create_raw_ssl.sql  create_source_watermarks.sql  create_unified_flows.sql
pipelines/sql/watermarks/: init_etl_watermarks.sql  init_source_watermarks.sql  update_pipeline_watermark.sql  update_source_watermark.sql
pipelines/src/data_pipeline/: archiver.py  const.py  etl.py  loader.py  transformer.py
pipelines/src/notebooks/: etl_dev.py  log2features.py  result_explorer.py  sqlutils_dev.py
pipelines/src/sqlutils/: __init__.py  core.py  core.py.bak  substitute.py
scripts/: setup_nb15.sh  sync_doc.sh  test_pipeline.sh
src/dataprep/: duckdb_strategy.py  graph_base.py  input_graph.py  transform.py  transformer.py
src/feat_eng/: duckdb_strategy.py  duckdb_transforms.py  input_graph.py
src/gnn/: const.py  dataset.py  graph_builder.py  helpers.py  nb15_gcn.py
src/graph/: graph_builder.py  graph_builder_gcn.py.bak
src/notebooks/: dataset_test.py  feature_engineering.py  feature_selection.py  learn_pyg.py  pipeline_dev.py  preprocess.py  train_gcn.py
src/notebooks/__marimo__/session/: data_engineering.py.json  dataset_test.py.json  datasets.py.json  explore.py.json  feature_engineering.py.json  feature_selection.py.json  graph_analysis.py.json  learn_pyg.py.json  pipeline_dev.py.json  preprocess.py.json  train_gcn.py.json  train_gnn.py.json
src/pipelines/: extract_load.py  preprocess_nb15.py  transform.py
src/zeek/: Dockerfile  unsw-extra.zeek
zeek/: Dockerfile  Dockerfile.dpi  README.md  TROUBLESHOOTING.md  run.sh  writekafka.zeek
zeek/dpi_impl/: kafka_streaming.zeek  pkt_stats.zeek  run.sh
zeek/nf_nb15_impl/: run.sh  unsw-nb15-features.zeek  unsw-nb15-kafka.zeek
zeek/nf_nb15_impl.bak/: unsw-nb15-features.zeek
zeek/og_nb15_impl/: run.sh  unsw-extra.zeek
zeek/og_nb15_impl.bak/: run.sh  writekafka.zeek
