[project]
name = "gnn-4-nids"
version = "0.1.0"
description = "network intrusion detection w/ graph neural net"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "anyio==4.10.0",
    "click==8.2.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "docutils==0.22",
    "duckdb==1.4.0",
    "gdown>=5.2.0",
    "h11==0.16.0",
    "idna==3.10",
    "imblearn>=0.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "loro==1.6.0",
    "marimo>=0.17.7",
    "markdown==3.8.2",
    "narwhals==2.2.0",
    "networkx>=3.5",
    "numpy==2.3.2",
    "packaging==25.0",
    "pandas==2.3.2",
    "parso==0.8.5",
    "pathlib==1.0.1",
    "polars==1.32.3",
    "psutil==7.0.0",
    "pyarrow==21.0.0",
    "pygments==2.19.2",
    "pymdown-extensions==10.16.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "ruff>=0.14.2",
    "seaborn>=0.13.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlglot==27.10.0",
    "starlette==0.47.3",
    "tomlkit==0.13.3",
    "torch==2.8.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.6.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-spline-conv>=1.2.2",
    "tzdata==2025.2",
    "uvicorn==0.35.0",
    "websockets==15.0.1",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "marimo>=0.15.2",
    "py>=1.11.0",
    "ty>=0.0.1a24",
]


[tool.uv.extra-build-dependencies]
torch-cluster = [ "torch" ]
torch-scatter = [ "torch" ]
torch-sparse = [ "torch" ]
torch-spline-conv = [ "torch" ]
