[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "sqlglot>=28.0.0",
]

[dependency-groups]
dev = [
    "marimo>=0.18.0",
]
