[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.12.2",
    "duckdb==1.4.0",
    "graph-building",
    "pyarrow==21.0.0",
    "sqlglot>=28.0.0",
]

[dependency-groups]
dev = [
    "marimo>=0.18.0",
    "polars>=1.35.2",
]

[tool.uv.sources]
graph-building = { path = "../graph_building" }
