[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.3",
    "boto3>=1.41.5",
    "confluent-kafka>=2.12.2",
    "duckdb==1.4.0",
    "graph-building",
    "pyarrow==21.0.0",
    "sqlglot>=28.0.0",
    "pathlib==1.0.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "data-pipeline",
    "marimo>=0.18.0",
    "polars>=1.35.2",
    "ruff>=0.14.8",
]

[tool.uv.sources]
graph-building = { path = "../graph_building" }