[project]
name = "model_training"
version = "0.1.0"
description = "training GCN for Network Intrusion Detection on UNSW-NB15 dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.41.5",
    "duckdb==1.4.0",
    "gdown>=5.2.0",
    "graph-building",
    "imblearn>=0.0",
    "mlflow>=3.6.0",
    "pathlib==1.0.1",
    "pyarrow==21.0.0",
    "torch==2.8.0",
    "torch-geometric>=2.7.0",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "marimo>=0.17.8",
    "py>=1.11.0",
    "ty>=0.0.1a24",
    "ruff>=0.14.2",
]

[tool.uv.sources]
graph-building = { path = "../graph_building" }
